<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".generatorActivity" >

    <include
        android:id="@+id/toolbarGenerator"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="#000000"
        android:text="                                           "
        android:background="@drawable/text_password"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10sp"
        android:text="@string/passwordText_2"
        android:textColor="#000000"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/refreshBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        app:srcCompat="@drawable/ic_refresh"
        android:layout_marginLeft="75sp"
        android:layout_marginTop="20sp"
        android:shadowColor="#c4c4c4"
        android:elevation="6dp"
        android:layout_below="@+id/passwordText" />

    <ImageButton
        android:id="@+id/copyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/button"
        android:onClick="OnCopyBtnClick"
        android:shadowColor="#c4c4c4"
        android:elevation="6dp"
        app:srcCompat="@drawable/ic_save" />

    <EditText
        android:id="@+id/lengthPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/refreshBtn"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="40sp"
        android:hint="@string/passworgHint"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/checkBoxSymvals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lengthPassword"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="40sp"
        android:checked="true"
        android:text="@string/TextChechBox"
        android:theme="@style/CheckBoxForSym" />


</RelativeLayout>